Added option parsint to install script